--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "**/templates/*": "django-txt",
         "**/requirements{/**,*}.{txt,in}": "pip-requirements",
         "limits": "c"
-    }
+    },
+    "C_Cpp.clang_format_fallbackStyle": "WebKit"
 }
